--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion Patient</title>
-    <link rel="stylesheet" href="./static/styles_connxion.css">
+    <link rel="stylesheet" href="./static/styles_connexion.css">
 
    
 </head>
