Mise à jour de la plateforme médicale

--- a/templates/medecin.html
+++ b/templates/medecin.html
@@ -10,10 +10,10 @@
     <header>
         <nav>
             <div class="nav-links">
-                <a href="./index.html">Accueil</a>
+                <a href="../index.html">Accueil</a>
                 <a href="./templates/medecin.html" class="active">Médecins</a>
                 <a href="../templates/rdv.html">Mes rendez-vous</a>
-                <a href="#">Profil</a>
+                <a href="./profil.html">Profil</a>
             </div>
         </nav>
     </header>
@@ -25,7 +25,7 @@
 
         <div class="doctor-profile-header">
             <div class="doctor-image">
-                <img src="/doctor_profile.png" alt="Photo du médecin">
+                <img src="/images/doctor_profile_image.png" alt="Photo du médecin">
             </div>
             <div class="doctor-header-info">
                 <h1>Dr. Martine</h1>
