--- a/templates/rdv.html
+++ b/templates/rdv.html
@@ -15,7 +15,7 @@
                 <a href="../index.html">Accueil</a>
                 <a href="medecin.html">Médecins</a>
                 <a href="../templates/rdv.html" class="active">Mes rendez-vous</a>
-                <a href="#">Profil</a>
+                <a href="./profil.html">Profil</a>
             </div>
         </nav>
     </header>
