remaniement total des pages

--- a/templates/medecin.html
+++ b/templates/medecin.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="nav-links">
-                <a href="../index.html">Accueil</a>
+                <a href="./acceuil.html">Accueil</a>
                 <a href="./templates/medecin.html" class="active">Médecins</a>
                 <a href="../templates/rdv.html">Mes rendez-vous</a>
                 <a href="./profil.html">Profil</a>
