--- a/templates/profil.html
+++ b/templates/profil.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Système de Réservation Médicale</title>
+    <title>profil</title>
     <link rel="stylesheet" href="../static/style_profil.css">
     <link rel="stylesheet" href="../static/styles.css">
 
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="nav-links">
-                <a href="../index.html" class="active">Accueil</a>
+                <a href="./acceuil.html" class="active">Accueil</a>
                 <a href="./medecin.html">Médecins</a>
                 <a href="./rdv.html">Mes rendez-vous</a>
                 <a href="./profil.html">Profil</a>
