--- a/templates/medecin.html
+++ b/templates/medecin.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil Médecin</title>
+    <title>Acceuil</title>
     <link rel="stylesheet" href="../static/styles_medecin.css">
     
 </head>
