--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -19,7 +19,7 @@
                 <label for="motDePasse">Mot de passe:</label>
                 <input type="password" id="motDePasse" name="motDePasse" required placeholder="Entrez votre mot de passe">
             </div>
-            <a href="./acceuil.html">Se connecter</a>
+            <a href="./acceuil.html" style="display: block; width: 100%; padding: 10px; background-color: #4CAF50; color: white; text-decoration: none; text-align: center; border-radius: 5px; margin-top: 10px;">Se connecter</a>
             <div id="messageErreur" class="message-erreur"></div>
         </form>
     </div>
