--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -32,7 +32,7 @@
                 <label for="confirm-password">Confirmer le mot de passe</label>
                 <input type="password" id="confirm-password" name="confirm-password" required>
             </div>
-            <a href="./acceuil.html">S'inscrire</a>
+            <a href="./acceuil.html" class="inscription-btn" style="display: inline-block; padding: 10px 20px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px; margin-top: 20px;">S'inscrire</a>
         </form>
     </div>
 </body>
