--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -21,6 +21,7 @@
             </div>
             <a href="./acceuil.html" style="display: block; width: 100%; padding: 10px; background-color: #4CAF50; color: white; text-decoration: none; text-align: center; border-radius: 5px; margin-top: 10px;">Se connecter</a>
             <div id="messageErreur" class="message-erreur"></div>
+            <p style="text-align: center; margin-top: 10px;">Vous n'avez pas de compte ? <a href="./inscription.html" style="color: #4CAF50; text-decoration: none;">Inscrivez-vous ici</a></p>
         </form>
     </div>
 </body>
