--- a/templates/inscription.html
+++ b/templates/inscription.html
@@ -33,6 +33,8 @@
                 <input type="password" id="confirm-password" name="confirm-password" required>
             </div>
             <a href="./acceuil.html" class="inscription-btn" style="display: inline-block; padding: 10px 20px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px; margin-top: 20px;">S'inscrire</a>
+
+            <p style="margin-top: 20px;">Déjà un compte ? <a href="./connexion.html" style="color: #4CAF50; text-decoration: none;">Connectez-vous ici</a></p>
         </form>
     </div>
 </body>
