--- a/templates/medecin.html
+++ b/templates/medecin.html
@@ -25,7 +25,7 @@
 
         <div class="doctor-profile-header">
             <div class="doctor-image">
-                <img src="/images/doctor_profile_image.png" alt="Photo du médecin">
+                <img src="../static/images/doctor_profile1.png" alt="Photo du médecin">
             </div>
             <div class="doctor-header-info">
                 <h1>Dr. Martine</h1>
@@ -51,19 +51,13 @@
             <button class="btn-appointment primary-btn">
                 <i class="far fa-calendar-plus"></i> Prendre rendez-vous
             </button>
-            <button class="btn-favorite secondary-btn">
-                <i class="far fa-heart"></i> Favoris
-            </button>
-            <button class="btn-share secondary-btn">
-                <i class="fas fa-share-alt"></i> Partager
-            </button>
         </div>
 
         <div class="doctor-profile-tabs">
             <div class="tab-headers">
                 <button class="tab-btn active" data-tab="info">Informations</button>
                 <button class="tab-btn" data-tab="schedule">Disponibilités</button>
-                <button class="tab-btn" data-tab="reviews">Avis (124)</button>
+
             </div>
             
             <div class="tab-content" id="info-tab">
