--- a/templates/rdv.html
+++ b/templates/rdv.html
@@ -46,7 +46,7 @@
                 
                 <div class="appointment-details">
                     <div class="doctor-info">
-                        <img src="/doctor_profile.png" alt="Photo du médecin" class="doctor-small-img">
+                        <img src="../static/images/doctor_profile1.png" alt="Photo du médecin" class="doctor-small-img">
                         <div>
                             <h3>Dr.Martine </h3>
                             <p class="specialty">Médecin généraliste</p>
@@ -59,8 +59,8 @@
                     </div>
                     
                     <div class="appointment-actions">
-                        <button class="btn-reschedule secondary-btn"><i class="far fa-calendar-alt"></i> Reprogrammer</button>
-                        <button class="btn-cancel secondary-btn"><i class="far fa-times-circle"></i> Annuler</button>
+                        <button class="btn-reschedule secondary-btn" onclick="window.location.href='reprogrammer.html'"><i class="far fa-calendar-alt"></i> Reprogrammer</button>
+                        <button class="btn-cancel secondary-btn" onclick="window.location.href='annuler.html'"><i class="far fa-times-circle"></i> Annuler</button>
                     </div>
                 </div>
             </div>
